--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,7 @@
     <string name="action_drawer_close">Close Profile Pane</string>
     <string name="action_settings">Settings</string>
     <string name="action_refresh">Refresh</string>
+    <string name="signin_facebook">Sign In With Facebook</string>
+    <string name="signin_twitter">Sign In With Twitter</string>
 
 </resources>
